@@ -1,3 +1,8 @@
+2008-04-07  Doug Evans  <dje@google.com>
+
+	* buildsym.h (last_source_file): Add dwarf info to comment.
+	(last_source_start_addr): Ditto.
+
 2008-04-07  Pedro Alves  <pedro@codesourcery.com>
 
 	* alphanbsd-tdep.c: Include "target.h".
